# setu-class-cpp

./: CMakeLists.txt  README.md  SaveTorchscriptModel.py  setu.cpp  setu.h  test.c
models/: __init__.py  build_model.py  resnext_wsl.py
models/vision/: __init__.py
